Aggiornamento collegamento immagini

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </div>
 
     <div class="button-game">
-    <button id="Paper" class="paper"><img src="/img/Paper.png" id="Paper" class="paper-image"><br>Paper</button>
-    <button id="Scissors" class="scissors"><img src="/img/Scissors.png" id="Scissors" class="scissors-image"><br>Scissors</button>
+    <button id="Paper" class="paper"><img src="img\Paper.png" id="Paper" class="paper-image"><br>Paper</button>
+    <button id="Scissors" class="scissors"><img src="img\Scissors.png" id="Scissors" class="scissors-image"><br>Scissors</button>
     <button id="Rock" class="rock" ><img src="img\Stone.png" id="Rock" class="rock-image"><br>Rock</button>
-    <button id="Lizard" class="lizard"><img src="/img/Lizard.png" id="Lizard" class="lizard-image"><br>Lizard</button>
-    <button id="Spock" class="spock"><img src="/img/Spock.png" id="Spock" class="spock-image"><br>Spock</button>
+    <button id="Lizard" class="lizard"><img src="img\Lizard.png" id="Lizard" class="lizard-image"><br>Lizard</button>
+    <button id="Spock" class="spock"><img src="img\Spock.png" id="Spock" class="spock-image"><br>Spock</button>
     </div>
 
 </body>
