--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paper,Scissors,Rock,Lizard,Spock</title>
+    <title>Rock, Scissors, Paper, Lizard, Spock</title>
     <link href="styles.css" rel="stylesheet">
     <script src="app.js" defer></script>
 </head>
 <body>
 
-    <h1>Paper, Scissors, Rock, Lizard, Spock</h1>
+    <h1>Rock, Scissors, Paper, Lizard, Spock</h1>
 
     <div class="choice-result">
     <h2 class="computer-choice" style="color: #f37f04;">Computer Choice: <span id="computer-choice" ></span></h2>
@@ -21,9 +21,9 @@
     
 
     <div class="button-game">
-    <button id="Paper" class="paper"><img src="img\Paper.png" id="Paper" class="paper-image"><br>Paper</button>
-    <button id="Scissors" class="scissors"><img src="img\Scissors.png" id="Scissors" class="scissors-image"><br>Scissors</button>
     <button id="Rock" class="rock" ><img src="img\Stone.png" id="Rock" class="rock-image"><br>Rock</button>
+    <button id="Scissors" class="scissors"><img src="img\Scissors.png" id="Scissors" class="scissors-image"><br>Scissors</button>
+    <button id="Paper" class="paper"><img src="img\Paper.png" id="Paper" class="paper-image"><br>Paper</button>
     <button id="Lizard" class="lizard"><img src="img\Lizard.png" id="Lizard" class="lizard-image"><br>Lizard</button>
     <button id="Spock" class="spock"><img src="img\Spock.png" id="Spock" class="spock-image"><br>Spock</button>
     </div>
